# owls

./: AGENTS.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  cli-config.yaml.example  cli.py  mcp_serve.py  mini_swe_runner.py  model_tools.py  ospilot-already-has-routines.md  owls  owls_constants.py  owls_logging.py  owls_state.py  owls_time.py  package.json  pyproject.toml  run_agent.py  setup-owls.sh  toolsets.py  trajectory_compressor.py  utils.py
acp_registry/: agent.json
agent/: anthropic_adapter.py  auxiliary_client.py  bedrock_adapter.py  context_engine.py  context_references.py  copilot_acp_client.py  credential_pool.py  display.py  experience_store.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  google_code_assist.py  google_oauth.py  insights.py  interfaces.py  memory_manager.py  memory_provider.py  model_metadata.py  models_dev.py  nous_rate_guard.py  planner.py  prompt_builder.py  redact.py  reflection_engine.py  skill_commands.py  skill_utils.py
cron/: __init__.py  jobs.py  scheduler.py
docs/: ARCHITECTURE.md  nginx-agent-gateway.conf  ospilot-session-and-compression-qa-notes.md
gateway/: __init__.py  bastion_proxy.py  channel_directory.py  config.py  delivery.py  hooks.py  mirror.py  pairing.py  restart.py  run.py  session.py  session_context.py  status.py  sticker_cache.py  stream_consumer.py
owls_cli/: __init__.py  agent_shell.py  agent_teams.py  auth.py  auth_commands.py  backup.py  banner.py  callbacks.py  claw.py  cli_output.py  clipboard.py  colors.py  commands.py  completion.py  config.py  copilot_auth.py  cron.py  curses_ui.py  debug.py  default_soul.py  dingtalk_auth.py  doctor.py  dump.py  env_loader.py  gateway.py  logs.py  main.py  mcp_config.py  memory_setup.py  model_normalize.py  model_switch.py  models.py  nous_subscription.py  pairing.py  platforms.py  plugins.py  plugins_cmd.py  profiles.py  providers.py  runtime_provider.py  (+13 more)
plugins/: __init__.py
scripts/: build_install_deploy.sh  contributor_audit.py  discord-voice-doctor.py  kill_modal.sh  release.py  run_tests.sh  sample_and_compress.py  setup_agent_shell_ssh.sh
skills/: README.md  __init__.py
tests/: conftest.py  test_agent_audit_trail.py  test_agent_behavior_explainability.py  test_agent_checkpoint_rollback.py  test_agent_disk_monitor.py  test_agent_high_risk_intercept.py  test_agent_memory_pressure_diagnosis.py  test_agent_multi_step_orchestration.py  test_agent_process_port_query.py  test_agent_user_management.py  test_cli_skin_integration.py  test_empty_model_fallback.py  test_ipv4_preference.py  test_mcp_serve.py  test_minimax_model_validation.py  test_model_tools.py  test_ospilot_state.py  test_owls_constants.py  test_owls_logging.py  test_project_metadata.py  test_subprocess_home_isolation.py  (+5 more)
(+806 files in other folders)
